--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ on:
     #branches: [ main ]
   # pull_request:
   #   branches: [ main ]
-  schedule:
-    - cron: '00 00 * * *'
+  #schedule:
+    #- cron: '00 00 * * *'
   # Allows you to run this workflow manually from the Actions tab
 #  workflow_dispatch:
 
